Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53761

QML components get automatically cleared from the type cache even if they are still in use

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.2, 5.7.0
    • 5.6.1
    • Quick: Controls 1
    • None
    • Ubuntu 15.10

      In this form, the bug affects version 5.6.1. it is fixed in version 5.6.1-1 and 5.7.0. In 5.6.0 and previous versions it can be triggered if the type cache is manually trimmed.

      Something really funky is going on here... the results seem to be different sometimes, and the can depend on which pages you visit, etc.

      When opening the app for the first time:

      Starting /home/mitch/dev/Qt5.7.0-rc1-test/Examples/Qt-5.7/quickcontrols/extras/flat-Desktop_Qt_5_7_0_GCC_64bit-Debug/flat...
      QML debugging is enabled. Only use this in a safe environment.
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:64: TypeError: Cannot read property 'flat' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:62: TypeError: Cannot read property 'flat' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:82: TypeError: Cannot read property 'checked' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:79: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:78: TypeError: Cannot read property 'checkable' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:94: TypeError: Cannot read property 'title' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:93: TypeError: Cannot read property 'checkable' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:90: TypeError: Cannot read property 'checkable' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/GroupBoxStyle.qml:58: TypeError: Cannot read property 'title' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:54: TypeError: Cannot read property 'enabled' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/GroupBoxStyle.qml:54:41: Unable to assign GroupBox_QMLTYPE_136 to GroupBox_QMLTYPE_208
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:64: TypeError: Cannot read property 'flat' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:62: TypeError: Cannot read property 'flat' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:82: TypeError: Cannot read property 'checked' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:79: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:78: TypeError: Cannot read property 'checkable' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:94: TypeError: Cannot read property 'title' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:93: TypeError: Cannot read property 'checkable' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:90: TypeError: Cannot read property 'checkable' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/GroupBoxStyle.qml:58: TypeError: Cannot read property 'title' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:54: TypeError: Cannot read property 'enabled' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/GroupBoxStyle.qml:54:41: Unable to assign GroupBox_QMLTYPE_136 to GroupBox_QMLTYPE_208
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:64: TypeError: Cannot read property 'flat' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:62: TypeError: Cannot read property 'flat' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:82: TypeError: Cannot read property 'checked' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:79: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:78: TypeError: Cannot read property 'checkable' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:94: TypeError: Cannot read property 'title' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:93: TypeError: Cannot read property 'checkable' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:90: TypeError: Cannot read property 'checkable' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/GroupBoxStyle.qml:58: TypeError: Cannot read property 'title' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:54: TypeError: Cannot read property 'enabled' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/GroupBoxStyle.qml:54:41: Unable to assign GroupBox_QMLTYPE_136 to GroupBox_QMLTYPE_208
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:64: TypeError: Cannot read property 'flat' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:62: TypeError: Cannot read property 'flat' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:82: TypeError: Cannot read property 'checked' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:79: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:78: TypeError: Cannot read property 'checkable' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:94: TypeError: Cannot read property 'title' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:93: TypeError: Cannot read property 'checkable' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:90: TypeError: Cannot read property 'checkable' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/GroupBoxStyle.qml:58: TypeError: Cannot read property 'title' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:54: TypeError: Cannot read property 'enabled' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/GroupBoxStyle.qml:54:41: Unable to assign GroupBox_QMLTYPE_136 to GroupBox_QMLTYPE_208
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:64: TypeError: Cannot read property 'flat' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:62: TypeError: Cannot read property 'flat' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:82: TypeError: Cannot read property 'checked' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:79: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:78: TypeError: Cannot read property 'checkable' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:94: TypeError: Cannot read property 'title' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:93: TypeError: Cannot read property 'checkable' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:90: TypeError: Cannot read property 'checkable' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/GroupBoxStyle.qml:58: TypeError: Cannot read property 'title' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:54: TypeError: Cannot read property 'enabled' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/GroupBoxStyle.qml:54:41: Unable to assign GroupBox_QMLTYPE_136 to GroupBox_QMLTYPE_208
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:64: TypeError: Cannot read property 'flat' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:62: TypeError: Cannot read property 'flat' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:82: TypeError: Cannot read property 'checked' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:79: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:78: TypeError: Cannot read property 'checkable' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:94: TypeError: Cannot read property 'title' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:93: TypeError: Cannot read property 'checkable' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:90: TypeError: Cannot read property 'checkable' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/GroupBoxStyle.qml:58: TypeError: Cannot read property 'title' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/GroupBoxStyle.qml:54: TypeError: Cannot read property 'enabled' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/GroupBoxStyle.qml:54:41: Unable to assign GroupBox_QMLTYPE_136 to GroupBox_QMLTYPE_208
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/StatusIndicatorStyle.qml:62: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/StatusIndicatorStyle.qml:61: TypeError: Cannot read property 'enabled' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/StatusIndicatorStyle.qml:62:48: Unable to assign StatusIndicator_QMLTYPE_110 to StatusIndicator_QMLTYPE_198
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/StatusIndicatorStyle.qml:62: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/StatusIndicatorStyle.qml:61: TypeError: Cannot read property 'enabled' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/StatusIndicatorStyle.qml:62:48: Unable to assign StatusIndicator_QMLTYPE_110 to StatusIndicator_QMLTYPE_198
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/StatusIndicatorStyle.qml:62: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/StatusIndicatorStyle.qml:61: TypeError: Cannot read property 'enabled' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/StatusIndicatorStyle.qml:62:48: Unable to assign StatusIndicator_QMLTYPE_110 to StatusIndicator_QMLTYPE_198
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/StatusIndicatorStyle.qml:62: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/StatusIndicatorStyle.qml:61: TypeError: Cannot read property 'enabled' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/StatusIndicatorStyle.qml:62:48: Unable to assign StatusIndicator_QMLTYPE_110 to StatusIndicator_QMLTYPE_198
      

      When opening the Tumbler page:

      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/StatusIndicatorStyle.qml:62:48: Unable to assign StatusIndicator_QMLTYPE_110 to StatusIndicator_QMLTYPE_198qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:123: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:129: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:128: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:123: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:129: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:128: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:159: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:158: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:123: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:129: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:128: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:123: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:129: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:128: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:159: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:158: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:123: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:129: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:128: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:159: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:158: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:123: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:129: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:128: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:92: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:73: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:72: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:83: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:82: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:123: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:129: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:128: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:123: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:129: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:128: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:159: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:158: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:123: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:129: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:128: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:123: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:129: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:128: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:159: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:158: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:123: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:129: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:128: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:159: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:158: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:123: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:129: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:128: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:92: TypeError: Cannot read property 'height' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:73: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:72: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:83: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:82: TypeError: Cannot read property 'enabled' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/TumblerStyle.qml:323: TypeError: Cannot read property 'columnCount' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:109: TypeError: Cannot read property 'enabled' of null
      qrc:/ExtrasImports/QtQuick/Controls/Styles/Flat/TumblerStyle.qml:117: TypeError: Cannot read property 'enabled' of null
      file:///home/mitch/dev/Qt5.7.0-rc1-test/5.7/gcc_64/qml/QtQuick/Controls/Styles/Base/TumblerStyle.qml:77:40: Unable to assign Tumbler_QMLTYPE_91 to Tumbler_QMLTYPE_245
      

      It works in 5.5.

        1. flat-example-delaybutton.png
          flat-example-delaybutton.png
          32 kB
        2. flat-example-statusindicator.png
          flat-example-statusindicator.png
          76 kB
        3. flat-example-tumbler.png
          flat-example-tumbler.png
          27 kB
        4. flat.zip
          3 kB
        5. qtbug53761-base.zip
          2 kB
        For Gerrit Dashboard: QTBUG-53761
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            mitch_curtis Mitch Curtis
            Votes:
            2 Vote for this issue
            Watchers:
            19 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes